--- a/extras-worldwind/pom.xml
+++ b/extras-worldwind/pom.xml
@@ -1,34 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.metsci.glimpse</groupId>
-        <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>com.metsci.glimpse</groupId>
+		<artifactId>glimpse-parent</artifactId>
+		<version>CURRENT-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>glimpse-extras-worldwind</artifactId>
+	<artifactId>glimpse-extras-worldwind</artifactId>
 
-    <dependencies>
+	<dependencies>
 
-        <dependency>
-            <groupId>com.metsci.glimpse</groupId>
-            <artifactId>glimpse-core</artifactId>
-            <version>${parent.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-core</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
 
-        <dependency>
-        	<groupId>com.metsci.ext.gov.nasa.worldwind</groupId>
-        	<artifactId>worldwindx</artifactId>
-        	<version>2.0.710</version>
-        </dependency>
+		<dependency>
+			<groupId>gov.nasa</groupId>
+			<artifactId>worldwindx</artifactId>
+			<version>2.0.0-986</version>
+		</dependency>
 
-        <dependency>
-        	<groupId>com.metsci.ext.gov.nasa.worldwind</groupId>
-        	<artifactId>worldwind</artifactId>
-        	<version>2.0.710</version>
-        </dependency>
+		<dependency>
+			<groupId>gov.nasa</groupId>
+			<artifactId>worldwind</artifactId>
+			<version>2.0.0-986</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 </project>
