--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,16 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!-- don't javadoc for internal releases -->
+		    <plugin>
+			<artifactId>maven-javadoc-plugin</artifactId>
+                      <executions>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+		    </plugin>
                 </plugins>
             </build>
         </profile>
