--- a/extras-worldwind/pom.xml
+++ b/extras-worldwind/pom.xml
@@ -21,13 +21,13 @@
 		<dependency>
 			<groupId>gov.nasa</groupId>
 			<artifactId>worldwindx</artifactId>
-			<version>2.0.0-986</version>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>gov.nasa</groupId>
 			<artifactId>worldwind</artifactId>
-			<version>2.0.0-986</version>
+			<version>2.0.0</version>
 		</dependency>
 
 	</dependencies>
