--- a/pom.xml
+++ b/pom.xml
@@ -283,22 +283,16 @@
                                 </pluginExecution>
                                 <pluginExecution>
                                     <pluginExecutionFilter>
-                                        <groupId>
-                                            org.apache.maven.plugins
-                                        </groupId>
-                                        <artifactId>
-                                            maven-javadoc-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [2.9.1,)
-                                        </versionRange>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-javadoc-plugin</artifactId>
+                                        <versionRange>[2.9.1,)</versionRange>
                                         <goals>
                                             <goal>jar</goal>
                                             <goal>javadoc</goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
