Reorganizing wheelfix so that: (1) other platform-specific fixes can be added, and (2) we don't swamp version control with changes to largish DLLs

--- a/platform-fixes/pom.xml
+++ b/platform-fixes/pom.xml
@@ -7,7 +7,7 @@
         <version>CURRENT-SNAPSHOT</version>
     </parent>
 
-    <artifactId>glimpse-wheelfix</artifactId>
+    <artifactId>glimpse-platform-fixes</artifactId>
 
     <dependencies>
 
