Replaced ${parent.version} with ${project.parent.version} in multiple poms to eliminate maven 3.0 warnings.

--- a/assembly/assembly-core/pom.xml
+++ b/assembly/assembly-core/pom.xml
@@ -9,20 +9,20 @@
     </parent>
 
     <artifactId>glimpse-core-assembly</artifactId>
-    <version>${parent.version}</version>
+    <version>${project.parent.version}</version>
     <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core-examples</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
