--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-util</artifactId>
-			<version>${parent.version}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
