--- a/extras-charts/pom.xml
+++ b/extras-charts/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
     </dependencies>
