--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
     </dependencies>
