Fix javadoc generation.

--- a/assembly/assembly-core/pom.xml
+++ b/assembly/assembly-core/pom.xml
@@ -60,6 +60,7 @@
                             <maxmemory>2056m</maxmemory>
                             <sourcepath>${project.build.directory}/sources</sourcepath>
                             <doctitle>Glimpse Data Visualization Library</doctitle>
+                            <failOnError>false</failOnError>
                         </configuration>
                     </execution>
                 </executions>
