--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.metsci.glimpse</groupId>
     <artifactId>glimpse-parent</artifactId>
-    <version>2.3.0-rc1</version>
+    <version>2.3.0-rc2</version>
     <packaging>pom</packaging>
 
     <name>Glimpse</name>
@@ -81,6 +81,9 @@
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
+                 <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
                 <executions>
                     <execution>
                         <id>deploy</id>
@@ -91,6 +94,7 @@
                             <show>public</show>
                             <maxmemory>2056m</maxmemory>
                             <doctitle>Glimpse Data Visualization Library</doctitle>
+                            <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </execution>
                 </executions>
