--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>2.3.0-rc10</version>
+        <version>2.3.0</version>
     </parent>
 
     <artifactId>glimpse-extras-dspl</artifactId>
