--- a/extras-worldwind/pom.xml
+++ b/extras-worldwind/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.metsci.glimpse</groupId>
 		<artifactId>glimpse-parent</artifactId>
-		<version>2.3.0-rc10</version>
+		<version>2.3.0</version>
 	</parent>
 
 	<artifactId>glimpse-extras-worldwind</artifactId>
