--- a/extras-examples/src/main/resources/dnc-examples/logging.properties
+++ b/extras-examples/src/main/resources/dnc-examples/logging.properties
@@ -7,4 +7,5 @@ sun.level = WARNING
 java.level = WARNING
 javax.level = WARNING
 
+com.metsci.glimpse.level = INFO
 com.metsci.glimpse.dnc.level = FINEST
