--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,12 @@
 
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-text</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-util</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
