Fix RectanglePacker license
Also update pom so that maven-license-plugin does not mess with it
again.

--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
                         <exclude>**/TextureAtlas.java</exclude>
                         <exclude>**/ElevatedSurfaceTileRenderer.java</exclude>
                         <exclude>**/ElevatedSectorGeometryList.java</exclude>
+                        <exclude>**/RectanglePacker.java</exclude>
                     </excludes>
                     <useDefaultExcludes>true</useDefaultExcludes>
                     <useDefaultMapping>true</useDefaultMapping>
