--- a/extras-dnc/pom.xml
+++ b/extras-dnc/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>3.0.0</version>
     </parent>
 
     <artifactId>glimpse-extras-dnc</artifactId>
