--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <module>core-examples</module>
 
         <module>layers</module>
+        <module>layers-examples</module>
 
         <module>docking</module>
         <module>docking-examples</module>
