Continue fleshing out LayeredExample

--- a/layers-examples/pom.xml
+++ b/layers-examples/pom.xml
@@ -13,6 +13,12 @@
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-platform-fixes</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-layers</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
