Add beginnings of layers-list panel

--- a/layers/pom.xml
+++ b/layers/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>glimpse-docking</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <version>4.2</version>
+        </dependency>
 	</dependencies>
 
 </project>
