--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.metsci.glimpse</groupId>
 		<artifactId>glimpse-parent</artifactId>
-		<version>CURRENT-SNAPSHOT</version>
+		<version>3.2.0-rc1</version>
 	</parent>
 
 	<artifactId>glimpse-core</artifactId>
