Add base wizard classes

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,9 @@
         <module>docking</module>
         <module>docking-examples</module>
 
+        <module>wizard</module>
+        <module>wizard-examples</module>
+        
         <module>extras-charts</module>
         <module>extras-dspl</module>
         <module>extras-dnc</module>
