Update to version 3.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.metsci.glimpse</groupId>
     <artifactId>glimpse-parent</artifactId>
-    <version>3.1.0-rc10</version>
+    <version>3.1.0</version>
     <packaging>pom</packaging>
 
     <name>Glimpse</name>
