--- a/text/pom.xml
+++ b/text/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.metsci.glimpse</groupId>
 		<artifactId>glimpse-parent</artifactId>
-		<version>3.1.0-rc10</version>
+		<version>3.1.0</version>
 	</parent>
 
 	<artifactId>glimpse-text</artifactId>
