Add topo module, for rendering topography and bathymetry

--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -54,6 +54,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-extras-topo</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.swinglabs.swingx</groupId>
             <artifactId>swingx-core</artifactId>
             <version>1.6.5-1</version>
