--- a/extras-topo/pom.xml
+++ b/extras-topo/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>3.2.0-rc15</version>
     </parent>
 
     <artifactId>glimpse-extras-topo</artifactId>
