Add new util-examples module, with MappedFileExample

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
     <modules>
 
         <module>util</module>
+        <module>util-examples</module>
+
         <module>text</module>
 
         <module>platform-fixes</module>
