--- a/util-examples/pom.xml
+++ b/util-examples/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>3.2.0-rc23</version>
     </parent>
 
     <artifactId>glimpse-util-examples</artifactId>
