--- a/extras-charts/pom.xml
+++ b/extras-charts/pom.xml
@@ -17,6 +17,17 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geotiff</artifactId>
+            <version>15.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>15.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
