--- a/extras-charts/pom.xml
+++ b/extras-charts/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>gt-epsg-hsql</artifactId>
             <version>19.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>19.1</version>
+        </dependency>
 
     </dependencies>
 
