Add osgeo maven repository to extras-examples pom

--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -100,6 +100,13 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>osgeo</id>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
 </project>
