Add QuickUtils.initStandardGlimpseApp(), and tidy up some examples
Still need to decide whether to add a initStandardGlimpseApp() call inside
Example.showWithSwing().

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,12 @@
 
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-platform-fixes</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-util</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
