Add a "var2" module with a revamped version of Var classes

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <module>util</module>
         <module>util-examples</module>
         <module>var</module>
+        <module>var2</module>
 
         <module>text</module>
 
