--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -24,6 +24,24 @@
             <artifactId>glimpse-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
     </dependencies>
 
