--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -9,6 +9,21 @@
 
     <artifactId>glimpse-extras-dspl</artifactId>
 
+	<!-- Temporary fix: https://github.com/javaee/jaxb-v2/issues/1168 -->
+    <repositories>
+        <repository>
+            <id>releases.java.net</id>
+            <url>http://maven.java.net/content/repositories/releases/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>jvnet-nexus-staging</id>
+            <url>http://maven.java.net/content/repositories/staging/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
+
     <dependencies>
 
         <dependency>
@@ -25,24 +40,22 @@
             <version>${project.parent.version}</version>
         </dependency>
         
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.4.0-b180608.0325</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>2.4.0-b180608.0325</version>
+        </dependency>
+       <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-jxc</artifactId>
+            <version>2.4.0-b180608.0325</version>
+        </dependency>
+        
     </dependencies>
 
 </project>
