--- a/extras-dnc/pom.xml
+++ b/extras-dnc/pom.xml
@@ -9,6 +9,20 @@
 
     <artifactId>glimpse-extras-dnc</artifactId>
 
+	<!-- Temporary fix: https://github.com/javaee/jaxb-v2/issues/1168 -->
+    <repositories>
+        <repository>
+            <id>releases.java.net</id>
+            <url>http://maven.java.net/content/repositories/releases/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>jvnet-nexus-staging</id>
+            <url>http://maven.java.net/content/repositories/staging/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
     <dependencies>
 
         <dependency>
@@ -28,6 +42,22 @@
             <groupId>gov.nasa</groupId>
             <artifactId>worldwind</artifactId>
             <version>2.0.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.4.0-b180608.0325</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>2.4.0-b180608.0325</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-jxc</artifactId>
+            <version>2.4.0-b180608.0325</version>
         </dependency>
 
     </dependencies>
