--- a/text/pom.xml
+++ b/text/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -10,7 +11,29 @@
 
 	<artifactId>glimpse-text</artifactId>
 
+	<!-- TEMPORARY JAVA 11 / JOGL 2.4.0 TEST CODE -->
+	<!-- REMOVE AND POINT AT MAVEN CENTRAL ARTIFACTS BEFORE RELEASE -->
+	<repositories>
+		<repository>
+			<id>metsci-releases</id>
+			<url>http://maven.metsci.com/metsci-releases</url>
+		</repository>
+		<repository>
+			<id>metsci-snapshots</id>
+			<url>http://maven.metsci.com/metsci-snapshots</url>
+		</repository>
+		<repository>
+			<id>thirdparty</id>
+			<url>http://maven.metsci.com/thirdparty</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
+		<dependency>
+			<groupId>com.metsci.ext.com.jogamp.opengl</groupId>
+			<artifactId>jogamp-fat</artifactId>
+			<version>1479</version>
+		</dependency>
 	</dependencies>
 
 </project>
