Modify MappedFile to use java.lang.ref.Cleaner

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
         <module>extras-dnc</module>
         <module>extras-examples</module>
         <module>extras-tinylaf</module>
-
+        <module>extras-topo</module>
+        
     </modules>
 
     <properties>
