--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>glimpse-util</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
