Continue working toward simultaneously compatibility with Java 8 and 9+

--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -55,8 +55,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.swinglabs.swingx</groupId>
-            <artifactId>swingx-core</artifactId>
+            <groupId>com.metsci.ext.swingx</groupId>
+            <artifactId>swingx-core-and-plaf</artifactId>
             <version>1.6.5-1</version>
         </dependency>
 
